Fixed Category spacing on Resource page. Also, eliminated dupes for multiple services in the same category.

--- a/app/styles/components/_resource.scss
+++ b/app/styles/components/_resource.scss
@@ -110,6 +110,10 @@
   }
 }
 
+.org-category {
+  margin: 0 5px 0 0;
+}
+
 .org-map {
   padding: calc-em(10px);
 }
